Enhance temporary file management and update README for clarity
- Added cleanup functionality to remove temporary files on application exit and startup in eel_app.py.
- Implemented error handling for GIF uploads in import_gif_bytes function to ensure valid GIF files are processed.
- Updated README.md to reflect changes in features and usage instructions, including the new web UI and improved file handling.
- Added .gitignore entries for local development files and virtual environments.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# Virtual environments
+pixie-env/
+
+# Web temp outputs
+web/tmp/
+
+# Local reviews and notes
+CODE_REVIEW.md
+DEV_NOTES.md
+
+# OS / editor files
+*.DS_Store
+Thumbs.db
+.vscode/
+.idea/
 # Python
 __pycache__/
 *.py[cod]
